k8s/overlays/production/redirect-service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: deuseda-redirect-dummy
spec:
  selector: null
