k8s/overlays/production/apex-redirect-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deuseda-apex-redirect
  annotations:
    konghq.com/plugins: prod-deuseda-redirect-plugin
